# tensorflow-inference-go

./: .gitattributes  .gitignore  Makefile  README.md  go.mod  go.sum  local-model-latest.scale  main.go  model-notebook.ipynb  model.safetensors  scale.signature
model/: Cargo.toml  lib.rs  scalefile
signature/guest/: Cargo.toml  guest.rs  types.rs
signature/host/: host.go  types.go
